# lair

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  config.nix  default.nix  test.sh
.circleci/: config.yml
.github/: pull_request_template.md
.github/manifest/: vcpkg-configuration.json  vcpkg.json
.github/workflows/: bin_tests.yml  build.yml  ci.yml  clippy.yml  fmt.yml  nix.yml  ops.release-build.yml  ops.static-analysis.yml  ops.test.yml  prepare-release.yml  publish-release.yml  release.yml  static.yml  test.yml
.github/workflows/.ops/: static-analysis.yml  test.yml
common/: build_ver.rs
crates/hc_seed_bundle/: Cargo.toml  README.md  README.tpl
crates/hc_seed_bundle/src/: lib.rs  seed_cipher.rs  unlocked_seed_bundle.rs
crates/hc_seed_bundle/src/seed_cipher/: pw_hash_limits.rs  pw_utils.rs  seed_bundle.rs  u8array.rs
crates/hc_seed_bundle/tests/: execute_fixture_tests.rs  fixtures.rs  seed_bundle_test_fixtures.json
crates/hc_seed_bundle/tests/fixtures/: seed_bundle_test_fixtures.json
crates/lair/: Cargo.toml
crates/lair/src/: entry.rs  internal.rs  ipc.rs  lib.rs  pid_check.rs  statics.rs  store.rs
crates/lair/src/internal/: codec.rs  sign_ed25519.rs  tls.rs
crates/lair/src/store/: store_file.rs
crates/lair/tests/: integration.rs
crates/lair_api/: Cargo.toml  README.md
crates/lair_api/src/: actor.rs  config.rs  error.rs  internal.rs  ipc.rs  lib.rs
crates/lair_api/src/internal/: codec.rs  ipc.rs  util.rs  wire.rs
crates/lair_api/src/internal/ipc/: unix_ipc.rs
crates/lair_api/src/internal/util/: err_spawn.rs  kill_switch.rs
crates/lair_api/src/ipc/: spawn_bind_server_ipc.rs  spawn_client_ipc.rs
crates/lair_client/: Cargo.toml  README.md
crates/lair_keystore/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  build.rs
crates/lair_keystore/benches/: parallel_key_generation.rs  parallel_usage.rs  signature_generation.rs
crates/lair_keystore/src/: entry.rs  internal.rs  ipc.rs  lib.rs  pid_check.rs  server.rs  server_test.rs  sql.rs  statics.rs  store.rs  store_sqlite.rs
crates/lair_keystore/src/docs/: help.md  import-seed-help.md  init-help.md  server-help.md  url-help.md
crates/lair_keystore/src/internal/: pid_check.rs  sign_ed25519.rs  tls.rs
crates/lair_keystore/src/sql/: insert.sql  insert_seed.sql  schema.sql  select_all.sql  select_by_sign_pk.sql  select_by_tag.sql  select_version.sql
crates/lair_keystore/src/store/: store_file.rs  store_sqlite.rs
crates/lair_keystore/tests/: client_commands.rs  common.rs  integration.rs  migrate_unencrypted.rs  panicky.rs  server_test.rs
crates/lair_keystore/tests/tests/: common.rs  fwd_compat_0_4_4.rs  migrate_unencrypted.rs  server_test.rs
crates/lair_keystore_api/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  build.rs
crates/lair_keystore_api/examples/: deterministic-keys.rs
crates/lair_keystore_api/src/: actor.rs  config.rs  encoding_types.rs  entry.rs  error.rs  in_proc_keystore.rs  internal.rs  ipc.rs  ipc_keystore.rs  lair_api.rs  lair_client.rs  lair_core.rs  lair_server.rs  lair_store.rs  lib.rs  mem_store.rs  sodium_secretstream.rs  test.rs  test_keystore.rs  types.rs
crates/lair_keystore_api/src/internal/: build.rs  codec.rs  crypto_box.rs  ipc.rs  rayon.rs  sign_ed25519.rs  tls.rs  wire.rs  x25519.rs
crates/lair_keystore_api/src/internal/ipc/: low_level.rs  unix_ipc.rs  win_ipc.rs
crates/lair_keystore_api/src/internal/util/: err_spawn.rs  kill_switch.rs  msg_id.rs
crates/lair_keystore_api/src/ipc/: spawn_bind_server_ipc.rs  spawn_client_ipc.rs
crates/lair_keystore_api/src/ipc_keystore/: raw_ipc.rs
crates/lair_keystore_api/src/lair_api/: crypto_box_xsalsa_by_pub_key.rs  crypto_box_xsalsa_by_sign_pub_key.rs  crypto_box_xsalsa_open_by_pub_key.rs  crypto_box_xsalsa_open_by_sign_pub_key.rs  derive_seed.rs  error.rs  export_seed_by_tag.rs  get_entry.rs  get_wka_tls_cert_priv_key.rs  hello.rs  import_seed.rs  list_entries.rs  new_seed.rs  new_wka_tls_cert.rs  secret_box_xsalsa_by_tag.rs  secret_box_xsalsa_open_by_tag.rs  sign_by_pub_key.rs  unlock.rs
crates/lair_keystore_api/src/lair_client/: async_io.rs
crates/lair_keystore_api/src/lair_server/: priv_api.rs  priv_srv.rs
crates/lair_keystore_api/src/sodium_secretstream/: crypt.rs  framed.rs  inner.rs
crates/lair_keystore_api/tests/: config.rs  sign-fallback.rs
crates/lair_keystore_cli/: Cargo.toml  build.rs
crates/lair_keystore_cli/src/: main.rs
crates/lair_keystore_client/: Cargo.toml  README.md  build.rs
crates/lair_keystore_client/src/: internal.rs  lib.rs
crates/lair_keystore_client/src/internal/: cargo_build_lair_executable.rs  run_lair_executable.rs
docs/: protocol.md
