[workspace]
resolver = "2"
members = [
  "crates/hc_seed_bundle",
  "crates/lair_keystore",
  "crates/lair_keystore_api",
]

[workspace.dependencies]
assert_cmd = "2.0.11"
base64 = "0.22.1"
criterion = "0.5.1"
dunce = "1.0.4"
futures = "0.3.28"
# this doesn't strictly need to be pinned, but it supports the
# determinism of the strict client/server version checks
hc_seed_bundle = { version = "=0.2.4", path = "./crates/hc_seed_bundle" }
# lair_keystore_api must be pinned to enable strict version checks
lair_keystore_api = { version = "=0.5.1", path = "./crates/lair_keystore_api" }
lru = "0.12.3"
nanoid = "0.4.0"
one_err = "0.0.8"
once_cell = "1.17.1"
parking_lot = "0.12.1"
pretty_assertions = "1.3.0"
rcgen = { version = "0.10.0", features = [ "zeroize" ] }
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = [ "with-serde" ] }
rpassword = "7.2.0"
rusqlite = { version = "0.32.1", features = [ "modern_sqlite" ] }
serde = { version = "1", features = [ "derive", "rc" ] }
serde_bytes = "0.11.9"
serde_json = "1"
serde_yaml = "0.9.21"
sodoken = "=0.0.11"
sqlformat = "=0.2.6"
structopt = "0.3.26"
sysinfo = "0.30.12"
tempdir = "0.3.7"
time = "0.3.36"
tokio = { version = "1.35.1" }
toml = "0.8.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
url = { version = "2.3.1", features = [ "serde" ] }
winapi = { version = "0.3.9", features = ["winerror"] }
zeroize = "1.6.0"

[patch.crates-io]
#one_err = { path = "../one_err" }
#sodoken = { path = "../sodoken/crates/sodoken" }
