[workspace]
members = [
  "crates/hc_seed_bundle",
  "crates/lair_keystore",
  "crates/lair_keystore_api",
]
resolver = "2"

[workspace.package]
version = "0.6.2"
homepage = "https://holochain.org"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/lair"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "keystore", "secret", "cryptography"]
categories = ["cryptography"]
edition = "2021"

[workspace.dependencies]
assert_cmd = "2.0.11"
base64 = "0.22.1"
dunce = "1.0.4"
futures = "0.3.28"
# this doesn't strictly need to be pinned, but it supports the
# determinism of the strict client/server version checks
hc_seed_bundle = { version = "=0.6.2", path = "./crates/hc_seed_bundle" }
# lair_keystore_api must be pinned to enable strict version checks
lair_keystore_api = { version = "=0.6.2", path = "./crates/lair_keystore_api" }
lru = "0.16"
mnemonic = "1.1.1"
nanoid = "0.4.0"
one_err = "0.0.8"
once_cell = "1.17.1"
pretty_assertions = "1.3.0"
rcgen = { version = "0.13", features = ["zeroize"] }
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
rpassword = "7.2.0"
rusqlite = { version = "0.37", features = ["modern_sqlite"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_bytes = "0.11.9"
serde_json = "1"
serde_yaml = "0.9.21"
sodoken = "=0.1.0"
sqlformat = "=0.4.0"
clap = "4.5"
sysinfo = "0.37"
tempfile = "3.23"
tokio = { version = "1.35.1" }
toml = "0.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }
winapi = { version = "0.3.9", features = ["winerror"] }
zeroize = "1.6.0"

[patch.crates-io]
#one_err = { path = "../one_err" }
#sodoken = { path = "../sodoken/crates/sodoken" }
