[package]
name = "hc_seed_bundle"
version = "0.2.3"
description = "SeedBundle parsing and generation library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/lair"
documentation = "https://docs.rs/hc_seed_bundle"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "keystore", "secret", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
futures = { workspace = true }
one_err = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true } # Version 1.0.1 requires Rust 1.70.0
serde = { workspace = true }
serde_bytes = { workspace = true }
sodoken = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
