[package]
name = "hc_seed_bundle"
version.workspace = true
description = "SeedBundle parsing and generation library."
documentation = "https://docs.rs/hc_seed_bundle"
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
futures = { workspace = true }
one_err = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }        # Version 1.0.1 requires Rust 1.70.0
serde = { workspace = true }
serde_bytes = { workspace = true }
sodoken = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
base64 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
