[package]
name = "lair"
version = "0.0.1-alpha.1"
description = "secret lair private keystore"
license = "Apache-2.0"
repository = "https://github.com/holochain/lair"
documentation = "https://docs.rs/lair"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "keystore", "secret", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
blake2b_simd = "0.5.10"
byteorder = "1"
derive_more = "0.99"
futures = "0.3"
ghost_actor = "0.2.0"
lair_api = { version = "0.0.1-alpha.1", path = "../lair_api" }
nanoid = "0.3"
num_cpus = "1"
once_cell = "1.4"
rayon = "1.3"
rcgen = "0.8.5"
ring = "0.16"
sysinfo = "0.15"
thiserror = "1"
tokio = { version = "0.2", features = [ "full" ] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = "0.2"

[lib]
name = "lair"
path = "src/lib.rs"

[[bin]]
name = "lair"
path = "src/bin/lair/lair.rs"
