[package]
name = "lair_api"
version = "0.0.1-alpha.1"
description = "secret lair private keystore types"
license = "Apache-2.0"
repository = "https://github.com/holochain/lair"
documentation = "https://docs.rs/lair"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "keystore", "secret", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
ghost_actor = "0.2.0"
thiserror = "1"
