[package]
name = "lair_api"
version = "0.0.1-alpha.1"
description = "secret lair private keystore types"
license = "Apache-2.0"
repository = "https://github.com/holochain/lair"
documentation = "https://docs.rs/lair"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "keystore", "secret", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
byteorder = "1"
derive_more = "0.99"
directories = "3"
futures = "0.3"
ghost_actor = "0.2.0"
ring = "0.16"
thiserror = "1"
tokio = { version = "0.2", features = [ "full" ] }

[dev-dependencies]
tempfile = "3"
