[package]
name = "lair_keystore"
version = "0.3.0"
description = "secret lair private keystore"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/lair"
documentation = "https://docs.rs/lair_keystore"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "keystore", "secret", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[features]
default = [ "rusqlite-bundled-sqlcipher-vendored-openssl" ]
rusqlite-bundled = [ "rusqlite/bundled" ]
rusqlite-bundled-sqlcipher = [ "rusqlite/bundled-sqlcipher" ]
rusqlite-bundled-sqlcipher-vendored-openssl = [ "rusqlite/bundled-sqlcipher-vendored-openssl" ]
rusqlite-sqlcipher = [ "rusqlite/sqlcipher" ]

[dependencies]
# lair_keystore_api must be pinned to enable strict version checks
lair_keystore_api = { version = "=0.3.0", path = "../lair_keystore_api" }
rpassword = "7.2.0"
rusqlite = { version = "0.29", features = [ "modern_sqlite" ] }
structopt = "0.3.26"
sysinfo = "0.28.4"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }

[build-dependencies]
lair_keystore_api = { version = "0.3.0", path = "../lair_keystore_api" }
pretty_assertions = "1.3.0"
sqlformat = "0.2.1"

[dev-dependencies]
criterion = "0.4.0"
tempdir = "0.3.7"

[lib]
name = "lair_keystore"
path = "src/lib.rs"

[[bin]]
name = "lair-keystore"
path = "src/bin/lair-keystore-bin/main.rs"
doc = false
