[package]
name = "lair_keystore"
version = "0.4.7"
description = "secret lair private keystore"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/lair"
documentation = "https://docs.rs/lair_keystore"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "keystore", "secret", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[features]
default = [ "rusqlite-bundled-sqlcipher-vendored-openssl" ]
rusqlite-bundled = [ "rusqlite/bundled" ]
rusqlite-bundled-sqlcipher = [ "rusqlite/bundled-sqlcipher" ]
rusqlite-bundled-sqlcipher-vendored-openssl = [ "rusqlite/bundled-sqlcipher-vendored-openssl" ]
rusqlite-sqlcipher = [ "rusqlite/sqlcipher" ]

[dependencies]
# lair_keystore_api must be pinned to enable strict version checks
lair_keystore_api = { workspace = true }
rpassword = { workspace = true }
rusqlite = { workspace = true }
structopt = { workspace = true }
sysinfo = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
lair_keystore_api = { workspace = true }
pretty_assertions = { workspace = true }
sqlformat = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempdir = { workspace = true }

[lib]
name = "lair_keystore"
path = "src/lib.rs"

[[bin]]
name = "lair-keystore"
path = "src/bin/lair-keystore-bin/main.rs"
doc = false

