[package]
name = "lair_keystore"
version.workspace = true
description = "secret lair private keystore"
documentation = "https://docs.rs/lair_keystore"
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[features]
default = ["rusqlite-bundled-sqlcipher-vendored-openssl"]
rusqlite-bundled = ["rusqlite/bundled"]
rusqlite-bundled-sqlcipher = ["rusqlite/bundled-sqlcipher"]
rusqlite-bundled-sqlcipher-vendored-openssl = [
  "rusqlite/bundled-sqlcipher-vendored-openssl",
]
rusqlite-sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
# lair_keystore_api must be pinned to enable strict version checks
lair_keystore_api = { workspace = true }
rpassword = { workspace = true }
rusqlite = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
sysinfo = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
lair_keystore_api = { workspace = true }
pretty_assertions = { workspace = true }
sqlformat = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "lair_keystore"
path = "src/lib.rs"

[[bin]]
name = "lair-keystore"
path = "src/bin/lair-keystore-bin/main.rs"
doc = false
