[package]
name = "lair_keystore_api"
version = "0.3.0"
description = "secret lair private keystore API library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/lair"
documentation = "https://docs.rs/lair_keystore_api"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "keystore", "secret", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
base64 = "0.13.1"
dunce = "1.0.4"
# this doesn't strictly need to be pinned, but it supports the
# determinism of the strict client/server version checks
hc_seed_bundle = { version = "=0.1.6", path = "../hc_seed_bundle" }
lru = "0.10.0"
nanoid = "0.4.0"
once_cell = "1.17.1"
parking_lot = "0.12.1"
rcgen = { version = "0.10.0", features = [ "zeroize" ] }
time = "=0.3.23" # Pinned to prevent rvgen pulling in ^0.2.25 which doesn't build on Rust 1.66.1
serde = { version = "1", features = [ "derive", "rc" ] }
serde_json = "1"
serde_yaml = "0.9.21"
tokio = { version = "1.27.0", features = [ "full" ] }
toml = "0.7.3"
tracing = "0.1.37"
url = { version = "2.3.1", features = [ "serde" ] }
zeroize = "1.6.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winerror"] }

[dev-dependencies]
assert_cmd = "2.0.11"
tempdir = "0.3.7"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }

[build-dependencies]
toml = "0.5.8"
