[package]
name = "lair_keystore_api"
version = "0.4.7"
description = "secret lair private keystore API library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/lair"
documentation = "https://docs.rs/lair_keystore_api"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "keystore", "secret", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
base64 = { workspace = true }
dunce = { workspace = true }
hc_seed_bundle = { workspace = true }
lru = { workspace = true }
nanoid = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rcgen = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempdir = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
toml = { workspace = true }

