[package]
name = "lair_keystore_api"
version.workspace = true
description = "secret lair private keystore API library"
documentation = "https://docs.rs/lair_keystore_api"
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
base64 = { workspace = true }
dunce = { workspace = true }
hc_seed_bundle = { workspace = true }
lru = { workspace = true }
nanoid = { workspace = true }
once_cell = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }
one_err = { workspace = true}

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
mnemonic = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
toml = { workspace = true }
