[package]
name = "lair_keystore_client"
version = "0.0.1-alpha.3"
description = "client connector to secret lair private keystore"
license = "Apache-2.0"
repository = "https://github.com/holochain/lair"
documentation = "https://docs.rs/lair_keystore_client"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "keystore", "secret", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
ghost_actor = "0.2.0"
lair_keystore_api = { version = "0.0.1-alpha.3", path = "../lair_keystore_api" }
tempfile = "3"
tokio = { version = "0.2", features = [ "full" ] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"

[build-dependencies]
lair_keystore_api = { version = "0.0.1-alpha.3", path = "../lair_keystore_api" }

[features]
default = []
cargo-compile-test = []
