[package]
name = "lair_keystore_client"
version = "0.0.2"
description = "client connector to secret lair private keystore"
license = "Apache-2.0"
repository = "https://github.com/holochain/lair"
documentation = "https://docs.rs/lair_keystore_client"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "keystore", "secret", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
ghost_actor = "0.3.0-alpha.1"
lair_keystore_api = { version = "0.0.2", path = "../lair_keystore_api" }
sodoken = "=0.0.1-alpha.8"
tempfile = "3"
tokio = { version = "1.8.1", features = [ "full" ] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"

[build-dependencies]
lair_keystore_api = { version = "0.0.2", path = "../lair_keystore_api" }

[features]
default = []
cargo-compile-test = []
bin-tests = []
